--- a/server/package.json
+++ b/server/package.json
@@ -66,7 +66,8 @@
     "sequelize": "^6.3.5",
     "sinon": "^9.2.0",
     "sinon-chai": "^3.5.0",
-    "uuid": "^8.3.1",
+    "socket.io": "2.3.0",
+    "uuid": "8.3.0",
     "validator": "^13.1.17",
     "yarn": "^1.22.10"
   },
